--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,7 +3,7 @@ NODE_ENV=DEVELOPMENT
 FRONTEND_URL ="http://localhost:3000"
 
 DB_URL=mongodb://127.0.0.1:27017/Ecommerce
-DB_URL=mongodb+srv://admin:admin@cluster0.iybftah.mongodb.net/Ecommerce
+# DB_URL=mongodb+srv://admin:admin@cluster0.iybftah.mongodb.net/Ecommerce
 
 
 JWT_SECRET=Peer1357
